# qbtrain-be

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yaml  qbtrain-to-pypi.yaml
dockerfiles/qbtrainserver/: Dockerfile
notebooks/: colab_setup.ipynb
python/qbtrain/: README.md  pyproject.toml  requirements.txt
python/qbtrain/qbtrain/: __init__.py
python/qbtrain/qbtrain/agents/: __init__.py  base_agent.py  code_execution_agent.py  response_generator_agent.py  source_extraction_agent.py  sql_agent.py
python/qbtrain/qbtrain/ai/classifiers/: injection_classifier.py
python/qbtrain/qbtrain/ai/llm/: azure_foundry_client.py  base_llm_client.py  bedrock_client.py  gcp_model_garden_client.py  huggingface_client.py  ollama_client.py  openai_client.py
python/qbtrain/qbtrain/crypto/: __init__.py  crypto.py
python/qbtrain/qbtrain/distillation/: __init__.py  attention_distiller.py  base_distiller.py  feature_distiller.py  standard_distiller.py  task_distiller.py
python/qbtrain/qbtrain/exceptions/: __init__.py  exceptions.py
python/qbtrain/qbtrain/tracers/: __init__.py  agent_tracer.py  base_tracer.py
python/qbtrain/qbtrain/utils/: authutils.py  callutils.py  formatutils.py  jsonutils.py  sqlutils.py  streamingutils.py  traceutils.py  typeutils.py
python/qbtrainserver/: db_migrated.sqlite3  manage.py  requirements.txt
python/qbtrainserver/apps/aisecurity/backdoorcheckpoint/: apps.py  functions.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/codeexec/: apps.py  functions.py  prompts.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/crdlr/: apps.py  functions.py  prompts.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/crdlr/assets/: crdlr.db  crdlr_copy.db
python/qbtrainserver/apps/aisecurity/crdlr/validation/: test.py
python/qbtrainserver/apps/aisecurity/cursedpixels/: apps.py  functions.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/echoleak/: apps.py  functions.py  prompts.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/echoleak/assets/: pdf_content.md
python/qbtrainserver/apps/aisecurity/echoleak/validation/: test.py
python/qbtrainserver/apps/aisecurity/figstep/: functions.py  prompts.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/imageadvattacks/: apps.py  functions.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/imscaler/: apps.py  functions.py  prompts.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/modeltheft/: apps.py  functions.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/modeltheftimages/: apps.py  functions.py  urls.py  views.py
python/qbtrainserver/apps/aisecurity/poisoneddataset/: apps.py  functions.py  urls.py  views.py
python/qbtrainserver/common/app_registry/: apps.py  data.py  urls.py  views.py
python/qbtrainserver/common/clients/: datasets_dl.py  urls.py  views.py
python/qbtrainserver/common/exfil/: apps.py  urls.py  views.py
python/qbtrainserver/qbtrainserver/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
(+3 files in other folders)
