[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qbtrain"
dynamic = ["version"]
description = "Tools for training and serving models (replace with a short description)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Pavan Reddy" }
]
# Only what the qbtrain library itself imports (AST-verified). Server-only deps
# (Django stack, ML/vision/OCR, etc.) live in python/qbtrainserver/requirements.txt.
dependencies = [
    "pydantic>=2.12.0",
    "openai>=2.16.0",
    "ollama>=0.6.0",
    "boto3>=1.42.40",
    "google-cloud-aiplatform>=1.135.0",
    "playwright>=1.40.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0",
    "sqlglot>=28.9.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
keywords = ["training", "ml", "qbtrain"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["qbtrain*"]

# Version comes ONLY from the git tag (vX.Y.Z). There is no version number in
# this file and NO fallback: CI injects it via SETUPTOOLS_SCM_PRETEND_VERSION
# from the tag, and any build that can't resolve a tagged version fails hard.
[tool.setuptools_scm]
root = "../.."